# src/api/openapi.yaml
@@ -1,4 +1,4 @@
-openapi: 3.1.0
+openapi: 3.0.0
 info:
   description: OpenAPI Reference für das CloudWP der HAW Hamburg für das SommerSemster
     2023
@@ -21,7 +21,8 @@ paths:
         in: path
         name: userId
         required: true
-        schema: {}
+        schema:
+          type: integer
         style: simple
       responses:
         "200":
@@ -52,20 +53,13 @@ paths:
         in: path
         name: userId
         required: true
-        schema: {}
+        schema:
+          type: integer
         style: simple
       responses:
         "200":
           description: OK
       summary: ""
-    parameters:
-    - description: Id of an existing user.
-      explode: false
-      in: path
-      name: userId
-      required: true
-      schema: {}
-      style: simple
     patch:
       description: Update the information of an existing user.
       operationId: patch-users-userId
@@ -75,7 +69,8 @@ paths:
         in: path
         name: userId
         required: true
-        schema: {}
+        schema:
+          type: integer
         style: simple
       requestBody:
         content:
@@ -168,6 +163,10 @@ paths:
         "200":
           content:
             application/json:
+              examples:
+                Example 1:
+                  value:
+                    pong: string
               schema:
                 $ref: '#/components/schemas/get_api_external_200_response'
           description: OK
@@ -179,33 +178,117 @@ paths:
         "200":
           description: OK
       summary: ""
+  /file/upload:
+    options:
+      operationId: options-file-upload
+      responses:
+        "200":
+          description: OK
+      summary: ""
+    put:
+      operationId: put-file-upload
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/File'
+      responses:
+        "200":
+          description: OK
+      security:
+      - bearer: []
+      summary: ""
+  /files:
+    get:
+      operationId: get-files
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/get_files_200_response'
+          description: OK
+      security:
+      - bearer: []
+      summary: Your GET endpoint
+      tags: []
+    options:
+      operationId: options-files
+      responses:
+        "200":
+          description: OK
+      summary: ""
+  /files/{name}:
+    get:
+      operationId: get-files-name
+      parameters:
+      - description: file name
+        explode: false
+        in: path
+        name: name
+        required: true
+        schema:
+          type: string
+        style: simple
+      responses:
+        "200":
+          content:
+            blob:
+              schema:
+                $ref: '#/components/schemas/File'
+          description: OK
+      security:
+      - bearer: []
+      summary: Your GET endpoint
+      tags: []
+    options:
+      operationId: options-files-name
+      parameters:
+      - description: file name
+        explode: false
+        in: path
+        name: name
+        required: true
+        schema:
+          type: string
+        style: simple
+      responses:
+        "200":
+          description: OK
+      summary: ""
 components:
   schemas:
     User:
-      description: ""
       example:
-        firstName: ""
-        lastName: ""
-        emailVerified: ""
-        dateOfBirth: 1997-10-31
-        id: ""
-        email: ""
-        createDate: ""
+        firstName: firstName
+        lastName: lastName
+        emailVerified: true
+        dateOfBirth: 1997-10-31T00:00:00.000+00:00
+        id: 0
+        email: email
+        createDate: 2000-01-23
       properties:
         id:
           description: Unique identifier for the given user.
-        firstName: {}
-        lastName: {}
+          type: integer
+        firstName:
+          type: string
+        lastName:
+          type: string
         email:
           format: email
+          type: string
         dateOfBirth:
           example: 1997-10-31
           format: date
+          type: string
         emailVerified:
           description: Set to true if the user's email has been verified.
+          type: boolean
         createDate:
           description: The date that the user was created.
           format: date
+          type: string
       required:
       - email
       - emailVerified
@@ -213,31 +296,71 @@ components:
       - id
       - lastName
       title: User
+      type: object
+    File:
+      properties:
+        name:
+          type: string
+        data:
+          format: binary
+          type: string
+      title: File
+      type: object
+      x-stoplight:
+        id: v3bkspnm47zj8
     patch_users_userId_request:
       properties:
-        firstName: {}
-        lastName: {}
+        firstName:
+          type: string
+        lastName:
+          type: string
         email:
           description: "If a new email is given, the user's email verified property\
             \ will be set to false."
-        dateOfBirth: {}
+          type: string
+        dateOfBirth:
+          type: string
+      type: object
     post_user_request:
       properties:
-        firstName: {}
-        lastName: {}
-        email: {}
+        firstName:
+          type: string
+        lastName:
+          type: string
+        email:
+          type: string
         dateOfBirth:
           format: date
+          type: string
       required:
       - dateOfBirth
       - email
       - firstName
       - lastName
+      type: object
     get_api_external_200_response:
       example:
-        pong: ""
+        pong: pong
       properties:
-        pong: {}
+        pong:
+          type: string
+      required:
+      - pong
+      type: object
+    get_files_200_response:
+      example:
+        bucket: bucket
+        files:
+        - files
+        - files
+      properties:
+        bucket:
+          type: string
+        files:
+          items:
+            type: string
+          type: array
+      type: object
   securitySchemes:
     bearer:
       description: ""
